--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                  <a class="btn btn-lightbtn-lg active" aria-pressed="true" href="https://discord.gg/VUpQwky9hx" role="button">Discord</a>
                  <a class="btn btn-lightbtn-lg active" aria-pressed="true" href="https://github.com/hclivess/nado" role="button">GitHub</a>
                  <a class="btn btn-lightbtn-lg active" aria-pressed="true" href="https://twitter.com/nadodigital" role="button">Twitter</a>
-                 <a class="btn btn-lightbtn-lg active" aria-pressed="true" href="readme.html" role="button">Readme</a>
+                 <a class="btn btn-lightbtn-lg active" aria-pressed="true" href="readme_nado.html" role="button">Readme</a>
 
                </div>
             </div>
@@ -108,8 +108,8 @@
             <h1 class="display-5 fw-bold">One giant leap</h1>
             <div class="col-lg-6 mx-auto">
                <p class="lead mb-4">
-                  NADO represents a revolution in cryptocurrency by introducing completely new mechanisms while combining
-                 the best of existing principles and leaving behind their disadvantages.
+                  By separating consensus from block production, NADO has reached an unprecedented milestone in how
+                  blockchain can be organized.
                </p>
 
             </div>
