--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <meta name="theme-color" content="#712cf9">
 
       <meta name="twitter:card" content="summary_large_image">
-      <meta name="twitter:site" content="@nadodigital">
-      <meta name="twitter:creator" content="@nadodigital">
+      <meta name="twitter:site" content="@nodeisok">
+      <meta name="twitter:creator" content="@nodeisok">
       <meta name="twitter:title" content="NADO">
       <meta name="twitter:description" content="Rewards for having an IP address. Proof-of-Work fairness. Proof-of-Stake efficiency.">
       <meta name="twitter:image" content="graphics/180_logo.png">
@@ -95,7 +95,7 @@
 
                  <a class="btn btn-lightbtn-lg active" aria-pressed="true" href="https://discord.gg/VUpQwky9hx" role="button">Discord</a>
                  <a class="btn btn-lightbtn-lg active" aria-pressed="true" href="https://github.com/hclivess/nado" role="button">GitHub</a>
-                 <a class="btn btn-lightbtn-lg active" aria-pressed="true" href="https://twitter.com/nadodigital" role="button">Twitter</a>
+                 <a class="btn btn-lightbtn-lg active" aria-pressed="true" href="https://twitter.com/nodeisok" role="button">Twitter</a>
                  <a class="btn btn-lightbtn-lg active" aria-pressed="true" href="readme_nado.html" role="button">Readme</a>
 
                </div>
